# polybot

./: .env.example  .gitignore  Dockerfile  README.md  V11_CHANGELOG.md  analyze_afternoon_may08.py  analyze_all_bots.py  analyze_copy.py  analyze_full_audit.py  analyze_morning_may08.py  analyze_overnight_may08.py  analyze_profile_wallets_ranked_fast.py  analyze_profit.py  analyze_rest.py  analyze_session.py  analyze_top.py  analyze_v1_hypothetical.py  bot.py  chain_listener.py  config.py  copy_bot.py  copy_wallet.py  dashboard_api.py  docker-compose.yml  get_token.py  hft_trades_v10.json  hft_trades_v1opt.json  hft_trades_v2_.json  hft_trades_v2_god.json  hft_trades_v2opt.json  hft_trades_v2opt2.json  hft_trades_v2opt3.json  hft_trades_v4.json  hft_trades_v4_.json  hft_trades_v5.json  hft_trades_v6.json  hft_tradesgodv1.json  la-vs-bin-bybit-trading-strategy-implementation.md  launch_copy_fleet.py  market-making-trading-strategy-implementation.md  (+20 more)
adaptive_market_maker/: .coverage  Makefile  README.md  audit_prompt.md  paper_trading_audit_prompt.md  pyproject.toml  requirements.txt
adaptive_market_maker/adapters/: __init__.py  base.py  binance_ws.py  mid_reconciler.py  polymarket_rest.py  polymarket_ws.py
polymarket-arb/: .coverage  .env.example  Makefile  README.md  audit_execution.md  audit_risk.md  audit_terminal.md  code_audit_01_executive_summary.md  code_audit_02_scope_architecture.md  code_audit_03_strategy_detection.md  code_audit_04_execution_positions.md  code_audit_05_risk_safety.md  code_audit_06_infrastructure.md  code_audit_07_remediation.md  code_flow_analysis.md  forensic_variables.md  pyproject.toml  scratch_query.py  test_clob.py
(+456 files in other folders)
