[project]
name = "polymarket-arb"
version = "0.1.0"
description = "Polymarket Crypto Up/Down Arbitrage Bot"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "orjson>=3.9.10",
    "numpy>=1.26.0",
    "asyncpg>=0.29.0",
    "SQLAlchemy>=2.0.23",
    "redis>=5.0.1",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[tool.setuptools]
packages = ["bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
